# Hazelchain

./: .gitignore  .travis.yml  Block.cpp  Block.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Fetch.cmake  README.md  Transaction.cpp  Transaction.h  linux.sh  main.cpp  settings.yml  util.h  vcpkg.json  windows.bat
.github/scripts/: linux.sh  windows.bat
.github/workflows/: cmake.yml  runCmake.sh
libs/: LIBS.md
libs/httpRequests/: http.hpp
libs/sha256/: sha256.h
misc/: Bit.py  KeyGen.py
src/: Block.cpp  Block.h  Http.cpp  Http.h  Transaction.cpp  Transaction.h  constants.h  main.cpp
src/libs/: LIBS.md
src/node/: Node.cpp  Node.h  Node.md  Packet.cpp  Packet.h  Server.cpp  Server.h  ServerRecv.h  ServerSend.h  server.cpp  server.h
src/storage/: Lookup.h
src/storage/logging/: Logger.cpp  Logger.h
src/storage/tree/: TransactionNode.cpp  TransactionNode.h  TransactionTree.cpp  TransactionTree.h
src/util/: Http.h  Math.cpp  Math.h  confutil.h  sha256.h  sockutil.h  strutil.h  util.h
storage/logging/: Logger.cpp  Logger.h
storage/tree/: Node.h  TransactionNode.cpp  TransactionNode.h  TransactionTree.cpp  TransactionTree.h  Tree.h
util/: util.h
